@startuml mawared-class-diagram
' MTNIMA — Mawared Domain Class Diagram (Dynamic RBAC)

skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName Arial

title Mawared — Core Model Class Diagram

enum UserRole <<enum>> {
  TechnicalAdmin
  InventorySupervisor
  WarehouseKeeper
  --
  +label(): string
}

enum AssetStatus <<enum>> {
  Warehouse
  Active
  Maintenance
}

enum MaintenanceStatus <<enum>> {
  Pending
  InProgress
  Completed
  Cancelled
}

enum MaintenancePriority <<enum>> {
  Low
  Medium
  High
  Urgent
}

class User {
  +id: bigint
  +first_name: string
  +last_name: string
  +name: string
  +email: string
  +role_id: bigint
  +password: string
  --
  +assignedRole(): BelongsTo
  +hasPermission(slug): bool
  +isTechnicalAdmin(): bool
  +isInventorySupervisor(): bool
  +homeRoute(): string
}

class Role {
  +id: bigint
  +name: string
  +slug: string
  +description: string?
  +is_system: bool
  --
  +permissions(): BelongsToMany
  +users(): HasMany
  +label(): string
}

class Permission {
  +id: bigint
  +slug: string
  +group: string
  --
  +roles(): BelongsToMany
  +label(): string
}

class Department {
  +id: bigint
  +name: string
  +deleted_at: datetime?
}

class Employee {
  +id: bigint
  +name: string
  +department_id: bigint?
  +deleted_at: datetime?
}

class Asset {
  +id: bigint
  +name: string
  +type: string
  +serial_number: string
  +status: AssetStatus
}

class Assignment {
  +id: bigint
  +asset_id: bigint
  +employee_id: bigint?
  +employee_name: string
  +department: string
  +assigned_date: date
}

class AssignmentHistory {
  +id: bigint
  +asset_id: bigint?
  +employee_name: string
  +assigned_date: date
  +returned_date: date?
}

class Maintenance {
  +id: bigint
  +asset_id: bigint
  +issue_description: string
  +priority: MaintenancePriority
  +technician_name: string
  +status: MaintenanceStatus
  +maintenance_start_date: date
  +maintenance_end_date: date?
}

Authenticatable <|-- User

User --> UserRole : slug constants
User "0..*" --> "1" Role : role_id >
Role "0..*" -- "0..*" Permission : role_permission >

Department "1" o-- "0..*" Employee
Asset "1" o-- "0..1" Assignment
Asset "1" o-- "0..*" Maintenance
Asset "1" o-- "0..*" AssignmentHistory
Employee "1" o-- "0..*" Assignment
Assignment "0..*" --> "1" Asset
Maintenance "0..*" --> "1" Asset

note bottom of User
  Authorization via assignedRole.permissions
  EnsurePermission middleware on routes
end note

@enduml
